# r2y

./: README.md  cli.py  pyproject.toml  r2y-governance.md
examples/: rect_beam.json  tee_beam.json
r2y/: __init__.py  schema.py
r2y/materials/: concrete.py  steel.py
r2y/section/: geometry.py  layers.py
tests/: test_concrete.py  test_geometry.py  test_layers.py  test_schema.py  test_steel.py
